// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sprint 41 price-label template contract > renders deterministic 58mm golden bytes 1`] = `
[
  27,
  64,
  27,
  97,
  1,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  67,
  65,
  70,
  69,
  32,
  79,
  82,
  71,
  65,
  78,
  73,
  67,
  79,
  32,
  53,
  48,
  48,
  71,
  10,
  27,
  97,
  2,
  27,
  69,
  1,
  29,
  33,
  17,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  83,
  47,
  32,
  49,
  50,
  46,
  57,
  48,
  10,
  29,
  33,
  0,
  27,
  69,
  0,
  27,
  97,
  1,
  29,
  104,
  64,
  29,
  72,
  2,
  29,
  107,
  2,
  52,
  48,
  48,
  54,
  51,
  56,
  49,
  51,
  51,
  51,
  57,
  51,
  49,
  0,
  10,
  27,
  97,
  0,
  10,
  29,
  86,
  66,
  4,
]
`;

exports[`Sprint 41 price-label template contract > renders deterministic 80mm golden bytes 1`] = `
[
  27,
  64,
  27,
  97,
  1,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  67,
  65,
  70,
  69,
  32,
  79,
  82,
  71,
  65,
  78,
  73,
  67,
  79,
  32,
  53,
  48,
  48,
  71,
  10,
  27,
  97,
  2,
  27,
  69,
  1,
  29,
  33,
  17,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  32,
  83,
  47,
  32,
  49,
  50,
  46,
  57,
  48,
  10,
  29,
  33,
  0,
  27,
  69,
  0,
  27,
  97,
  1,
  29,
  104,
  64,
  29,
  72,
  2,
  29,
  107,
  2,
  52,
  48,
  48,
  54,
  51,
  56,
  49,
  51,
  51,
  51,
  57,
  51,
  49,
  0,
  10,
  27,
  97,
  0,
  10,
  29,
  86,
  66,
  4,
]
`;

exports[`Sprint 41 price-label template contract > validates and encodes CODE128 without a runtime dependency 1`] = `
[
  104,
  51,
  43,
  53,
  13,
  33,
  34,
  35,
  13,
  17,
  18,
  19,
  64,
  106,
]
`;

exports[`Sprint 41 price-label template contract > validates and encodes EAN8 without a runtime dependency 1`] = `
[
  9,
  6,
  3,
  8,
  5,
  0,
  7,
  4,
]
`;

exports[`Sprint 41 price-label template contract > validates and encodes EAN13 without a runtime dependency 1`] = `
[
  4,
  0,
  0,
  6,
  3,
  8,
  1,
  3,
  3,
  3,
  9,
  3,
  1,
]
`;
